<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bikers_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bikers_second"
        android:contentDescription="@string/bikers_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/share"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/share"
        android:background="@drawable/ic_share_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bikers_second"
        app:layout_constraintBottom_toTopOf="@+id/help_others">

    </ImageView>


    <ImageView
        android:id="@+id/help_others"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:contentDescription="@string/help_others"
        android:background="@drawable/ic_help_others"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        >

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>