<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/bikers_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bikers_first"
        android:contentDescription="@string/bikers_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/travel_with_polair"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/travel"
        android:background="@drawable/ic_travel_with_polair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bikers_first"
        app:layout_constraintBottom_toTopOf="@+id/mobilize"
        >

    </ImageView>

    <ImageView
        android:id="@+id/mobilize"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:contentDescription="@string/mobilize"
        android:background="@drawable/ic_movilizate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travel_with_polair"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp">

    </ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>