<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/selectPathBlue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLaySelectPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/consLayStartPath"
            app:layout_constraintBottom_toBottomOf="@id/consLayStartPath" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayStartPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/imvBack"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/grey_field_button"
            android:padding="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="25dp">


            <TextView
                style="@style/monserratBold"
                android:text="@string/start_path"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_start_path"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayFinishPath"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/consLayStartPath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/consLayStartPath"
            android:background="@drawable/grey_field_button"
            android:padding="8dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="10dp">


            <TextView
                style="@style/monserratBold"
                android:text="@string/finish_path"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="15dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txvSafePath"
            style="@style/monserratMedium"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consLayFinishPath"
            android:textSize="12dp"
            android:layout_margin="15dp"
            android:text="@string/safe_path"
            android:textColor="@android:color/white"/>

        <View
            android:id="@+id/whiteLine"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintStart_toEndOf="@id/txvSafePath"
            app:layout_constraintTop_toBottomOf="@id/consLayFinishPath"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/white" />

        <ImageView
            android:id="@+id/imvBicycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_white_bicycle"
            app:layout_constraintStart_toEndOf="@+id/whiteLine"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consLayFinishPath"
            app:layout_constraintEnd_toStartOf="@id/imvHuman"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@+id/imvHuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_grey_human"
            app:layout_constraintStart_toEndOf="@+id/imvBicycle"
            app:layout_constraintTop_toBottomOf="@id/consLayFinishPath"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLaySavedPaths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/consLaySelectPath"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/txvTitleSavedRoutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/paths_saved"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white"/>

        <RadioButton
            android:id="@+id/rdbtnHouseToU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txvTitleSavedRoutes"
            android:layout_marginStart="20dp"
            android:theme="@style/MyRadioButton" />


        <TextView
            android:id="@+id/txvHouse1"
            android:text="@string/house"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            style="@style/monserratMedium"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/rdbtnHouseToU"
            app:layout_constraintBottom_toTopOf="@id/rdbtnHouseToU"
            app:layout_constraintTop_toBottomOf="@id/rdbtnHouseToU"
            android:drawableStart="@drawable/ic_house_"
            android:gravity="center"
            android:drawablePadding="10dp"/>

        <ImageView
            android:id="@+id/imvRightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_right_arrow"
            app:layout_constraintStart_toStartOf="@id/imvRightArrow2"
            app:layout_constraintBottom_toTopOf="@id/rdbtnHouseToU"
            app:layout_constraintTop_toBottomOf="@id/rdbtnHouseToU" />

        <TextView
            android:id="@+id/txvUniversity"
            style="@style/monserratMedium"
            app:layout_constraintStart_toEndOf="@id/imvRightArrow"
            app:layout_constraintBottom_toTopOf="@id/rdbtnHouseToU"
            app:layout_constraintTop_toBottomOf="@id/rdbtnHouseToU"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/university"
            android:textColor="@android:color/white"
            android:textAllCaps="true"
            android:drawableStart="@drawable/ic_university_icon"
            android:drawablePadding="10dp"/>

        <RadioButton
            android:id="@+id/rdbtnWorkToHouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rdbtnHouseToU"
            android:layout_marginStart="20dp"
            android:theme="@style/MyRadioButton"/>

        <TextView
            android:id="@+id/txvWork"
            android:text="@string/work"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            style="@style/monserratMedium"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/rdbtnWorkToHouse"
            app:layout_constraintBottom_toTopOf="@id/rdbtnWorkToHouse"
            app:layout_constraintTop_toBottomOf="@id/rdbtnWorkToHouse"
            android:drawableStart="@drawable/ic_work_icon"
            android:gravity="center"
            android:drawablePadding="10dp"/>

        <ImageView
            android:id="@+id/imvRightArrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_right_arrow"
            app:layout_constraintStart_toEndOf="@id/txvWork"
            app:layout_constraintBottom_toTopOf="@id/rdbtnWorkToHouse"
            app:layout_constraintTop_toBottomOf="@id/rdbtnWorkToHouse"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/txvHouse2"
            android:text="@string/house"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            style="@style/monserratMedium"
            app:layout_constraintStart_toStartOf="@id/txvUniversity"
            app:layout_constraintBottom_toTopOf="@id/rdbtnWorkToHouse"
            app:layout_constraintTop_toBottomOf="@id/rdbtnWorkToHouse"
            android:drawableStart="@drawable/ic_house_"
            android:gravity="center"
            android:drawablePadding="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>